--- a/bb/Cargo.toml
+++ b/bb/Cargo.toml
@@ -8,3 +8,4 @@ color-eyre = "0.6.5"
 crossterm = "0.29.0"
 ratatui = { version = "0.29.0", default-features = false, features = ["termwiz"] }
 termwiz = "0.23.3"
+tokio = {version = "1", features = ["full"] }
